--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,36 @@
-alembic==0.9.6
-Babel==2.5.1
-blinker==1.4
-certifi==2017.7.27.1
+alembic==1.5.5
+appdirs==1.4.3
+CacheControl==0.12.6
+certifi==2019.11.28
 chardet==3.0.4
-click==6.7
-dnspython==2.1.0
-dominate==2.3.1
-elasticsearch==7.10.1
-email-validator==1.1.2
+click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0
+distlib==0.3.0
+distro==1.4.0
 Flask==1.1.2
-Flask-Babel==2.0.0
-Flask-Bootstrap==3.3.7.1
-Flask-HTTPAuth==4.2.0
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.3
-Flask-Moment==0.11.0
+Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-guess-language-spirit==0.5.3
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.11.2
-Mako==1.0.7
+html5lib==1.0.1
+idna==2.8
+ipaddr==2.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lockfile==0.12.2
+Mako==1.1.4
 MarkupSafe==1.1.1
-PyJWT==1.5.3
-python-dateutil==2.6.1
-python-dotenv==0.15.0
-python-editor==1.0.3
-pytz==2017.2
-redis==3.5.3
-requests==2.25.1
-rq==1.7.0
-six==1.11.0
-SQLAlchemy==1.3.22
-urllib3==1.26.2
-visitor==0.1.3
+msgpack==0.6.2
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytoml==0.1.21
+requests==2.22.0
+retrying==1.3.3
+six==1.14.0
+SQLAlchemy==1.3.23
+urllib3==1.25.8
+webencodings==0.5.1
 Werkzeug==1.0.1
-WTForms==2.1
-
-# requirements for Heroku
-#psycopg2==2.7.3.1
-#gunicorn==19.7.1
