--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.5.5
 appdirs==1.4.3
+autopep8==1.5.5
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -11,6 +12,7 @@ distro==1.4.0
 Flask==1.1.2
 Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
@@ -23,6 +25,7 @@ msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
+pycodestyle==2.6.0
 pyparsing==2.4.6
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -31,6 +34,8 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 SQLAlchemy==1.3.23
+toml==0.10.2
 urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
+WTForms==2.3.3
