--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ distro==1.4.0
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
